Enhanced backtesting system with modern Java patterns and best practices
- PriceData: Converted to Java record with LocalDate, compact constructor
  validation, and factory method for CSV parsing
- Trade: Final class with immutable entry fields, Optional for nullable
  exit fields, switch expression for P/L, IllegalStateException guard
- TradingStrategy: Sealed interface with default validation and warmup
  methods, permits clause restricting implementations
- TechnicalIndicators: New utility class extracting shared SMA, EMA, RSI,
  and MACD calculations (DRY/SRP), with full input validation
- All strategies: Final fields, constructor validation, delegated to
  TechnicalIndicators, toString() overrides
- BacktestResult: Builder pattern, private constructor, unmodifiable
  collections, stream-based metrics, IntStream for Sharpe ratio
- BacktestEngine: Builder pattern with fluent API, defensive copies,
  extracted closeTrade helper method, Objects.requireNonNull throughout
- SPYBacktest: List.of for immutable strategy list, try-with-resources,
  Path/Files NIO API, List.copyOf for returned data, Comparator stream
  for best strategy, error output to stderr, local CSV fallback

https://claude.ai/code/session_01Ty3TPWafMc1igXcKiSaDx6